New version of project, and start of refactoring summary

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps_dir, ["deps"]}.
 {sub_dirs, ["rel", "apps/cdashbot"]}.
-{erl_opts, [debug_info, fail_on_warning]}.
+{erl_opts, [{d, debug}, fail_on_warning]}.
 
 
 {deps, [
