--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,6 @@
 {deps, [
      {exmpp, ".*", {git, "git://github.com/Zert/exmpp.git", {branch, "rebar"}}},
      {zucchini, ".*", {git, "https://github.com/devinus/zucchini.git", {branch, "master"}}},
-     {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {branch, "master"}}}
+     {jsonx, ".*", {git, "git://github.com/iskra/jsonx.git", master}},
+     {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "master"}}}
 	]}.
