--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -6,6 +6,14 @@
          {error_logger_mf_dir, "log/sasl"},      % Log directory
          {error_logger_mf_maxbytes, 10485760},   % 10 MB max file size
          {error_logger_mf_maxfiles, 5}           % 5 files max
-        ]}
+        ]},
+{lager, [
+  {handlers, [
+    {lager_console_backend, info},
+    {lager_file_backend, [{file, "log/debug.log"}, {level, debug}]},
+    {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
+    {lager_file_backend, [{file, "log/console.log"}, {level, info}]}
+  ]}
+]}
 ].
 
