add lager(log) support.

--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,11 @@
 {deps_dir, ["deps"]}.
 {sub_dirs, ["rel", "apps/cdashbot"]}.
-{erl_opts, [{d, debug}, fail_on_warning]}.
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 
 
 {deps, [
+     {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "master"}}},
      {exmpp, ".*", {git, "git://github.com/Zert/exmpp.git", {branch, "rebar"}}},
      {zucchini, ".*", {git, "https://github.com/devinus/zucchini.git", {branch, "master"}}},
-     {jsonx, ".*", {git, "git://github.com/iskra/jsonx.git", master}},
-     {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "master"}}}
+     {jsonx, ".*", {git, "git://github.com/iskra/jsonx.git", master}}
 	]}.
