--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -3,9 +3,9 @@
 {lager, [
   {handlers, [
     {lager_console_backend, info},
-    {lager_file_backend, [{file, "log/debug.log"}, {level, debug}]},
-    {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
-    {lager_file_backend, [{file, "log/console.log"}, {level, info}]}
+    {lager_file_backend, [{file, "/var/log/cdashbot/debug.log"}, {level, debug}]},
+    {lager_file_backend, [{file, "/var/log/cdashbot/error.log"}, {level, error}]},
+    {lager_file_backend, [{file, "/var/log/cdashbot/access.log"}, {level, info}]}
   ]}
 ]}
 ].
