added first test

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,10 @@
 {deps_dir, ["deps"]}.
 {sub_dirs, ["rel", "apps/cdashbot"]}.
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+{eunit_opts, [verbose, {skip_deps, true}]}.
+{eunit_exclude_deps, true}.
+{cover_enabled, true}.
+
 
 
 {deps, [
